        again because we want to find the last match. We need to try again without
        adding any more text or handling the break before moving on.

2009-01-05  Adam Treat  <treat@kde.org>

        Fix the Qt build

        * bridge/runtime_object.cpp:
        (JSC::RuntimeObjectImp::put):

2009-01-05  Alexey Proskuryakov  <ap@webkit.org>

        Suggested by Dave Levin.

        Mac release build fix.

        * WebCore.base.exp: Remove ThreadGlobalData::eventNames(), which is now inline.

2009-01-05  Darin Adler  <darin@apple.com>

        * dom/Document.cpp: Fix build. Oops again.

2009-01-05  Darin Adler  <darin@apple.com>

        Reviewed by Anders Carlsson.

        Fix hang whenever following an anchor.

        * dom/Document.cpp:
        (WebCore::Document::findAnchor): Oops!

2009-01-05  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=23073
        <rdar://problem/6471129> Workers crash on Windows Release builds

        * platform/ThreadGlobalData.cpp: (WebCore::ThreadGlobalData::ThreadGlobalData):
        * platform/ThreadGlobalData.h: (WebCore::ThreadGlobalData::eventNames):
        Now that ThreadSpecific sets up the pointer before invoking data constructor, we can
        initialize EventNames right away.

2009-01-05  Darin Adler  <darin@apple.com>

        Reviewed by Anders Carlsson.

        Bug 23106: HTMLFormCollection::namedItem ignores caseSensitive argument
        https://bugs.webkit.org/show_bug.cgi?id=23106

        This led me to a bunch of dead code. It turns out that HTML collections
        were carrying the case-insensitive code just so they could be used to
        find anchors, something we can do more simply and efficiently without
        creating a DOM HTMLCollection object.

        No behavior change. Just adding a new function findAnchor function and
        removing some dead code.

        * dom/Document.cpp: